# AstraRP

./: .env.example  .gitignore  .gitmodules  README.md  binding.gyp  config.json  graph_connections.json  package-lock.json  package.json  server.js  test.js
.github/workflows/: ci.yml
core/: .env.example  CMakeLists.txt  binding.cpp
core/examples/: test_batch_manager.cpp  test_context_manager.cpp  test_diamond_models.cpp  test_event_bus.cpp  test_graph.cpp  test_inference.cpp  test_loader.cpp  test_model_manager.cpp  test_scheduler.cpp
core/include/core/: batch.hpp  batch_manager.hpp  context.hpp  context_manager.hpp  context_params.hpp  global_config.hpp  init_manager.hpp  lora.hpp  lora_manager.hpp  model.hpp  model_manager.hpp  model_params.hpp  sampler.hpp  sampler_chain.hpp  sampler_params.hpp  tokenizer.hpp
core/include/infer/: context_transaction.hpp  decode_task.hpp  engine.hpp  generation_config.hpp  i_task.hpp  inference_backend.hpp  llama_backend.hpp  params.hpp  sample_task.hpp  session.hpp  task.hpp  tokenize_task.hpp
core/include/pipeline/: base_node.hpp  event_bus.hpp  format_node.hpp  graph.hpp  inference_node.hpp  output_node.hpp  scheduler.hpp
core/include/utils/: error.hpp  logger.hpp  result.hpp  types.hpp
core/src/: main.cpp
core/src/core/: batch.cpp  batch_manager.cpp  context.cpp  context_manager.cpp  context_params.cpp  global_config.cpp  init_manager.cpp  lora.cpp  lora_manager.cpp  model.cpp  model_manager.cpp  model_params.cpp  sampler.cpp  sampler_chain.cpp  tokenizer.cpp
core/src/infer/: context_transaction.cpp  decode_task.cpp  engine.cpp  llama_backend.cpp  sample_task.cpp  session.cpp  task.cpp  tokenize_task.cpp
core/src/pipeline/: event_bus.cpp  graph.cpp  inference_node.cpp  scheduler.cpp
core/tests/: CMakeLists.txt  test_base_node_state_event.cpp  test_error_builder_fields.cpp  test_error_domain_strings.cpp  test_graph_cycle_three.cpp  test_graph_disconnected.cpp  test_graph_in_degrees.cpp  test_graph_missing_source.cpp  test_graph_validation.cpp  test_result_basic.cpp  test_result_macros.cpp  test_scheduler_failure.cpp
core/tests/pipeline/: test_base_node_input.cpp  test_event_bus.cpp  test_event_bus_error_subs.cpp  test_event_bus_state_subs.cpp  test_graph_branching_dag.cpp  test_graph_duplicate_edge.cpp  test_graph_empty.cpp  test_graph_link_table.cpp  test_graph_multiple_parents.cpp  test_graph_self_loop.cpp  test_scheduler_basic.cpp  test_scheduler_chain.cpp  test_scheduler_error_event.cpp  test_scheduler_fanout.cpp  test_scheduler_multiple_roots.cpp
core/tests/utils/: test_error_builder.cpp  test_error_context_id.cpp  test_error_to_string_context.cpp  test_error_wrap_cause.cpp  test_result_map_err_on_ok.cpp  test_result_map_on_err.cpp  test_result_unwrap_exceptions.cpp  test_result_unwrap_or.cpp  test_result_void_and_then.cpp
dataset_factory/: .gitignore  data_base_generator.py  dataset_tools.py  debug.py  pyproject.toml  requirements.txt
dataset_factory/dataset_tools/: __init__.py  batch_runner.py  client.py  config.py  runner.py  schema.py  task.py
dataset_factory/dataset_tools/utils/: __init__.py  test.py
dataset_factory/examples/: run_multi_tasks.py  run_single_task.py
dataset_factory/tasks/: intent_emotion.json
scripts/: build.js  build_addon.js  build_core.js  build_tests.js  debug_token_routing_and_infer_guard.js  setup.js  test.js  test_only.js  test_rebuild.js
webui/: package-lock.json  package.json
webui/src/: App.tsx  index.css
webui/src/components/: LogSidebar.tsx  Sidebar.tsx
webui/src/edges/: TokenEdge.tsx
webui/src/nodes/: FormatNode.tsx  InferenceNode.tsx  OutputNode.tsx
webui/src/store/: useFlowStore.ts
